<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:ignore="Overdraw">

    <!-- I've had this thing for so long, waiting
     for the perfect moment to use it -->
    <com.doctoror.particlesdrawable.ParticlesView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:dotColor="@android:color/white"
        app:frameDelayMillis="10"
        app:lineColor="@android:color/white"
        app:lineDistance="@dimen/particlesLineDistance"
        app:lineThickness="@dimen/particlesLineThickness"
        app:maxDotRadius="@dimen/particlesMaxDotRadius"
        app:minDotRadius="@dimen/particlesMinDotRadius"
        app:numDots="60"
        app:stepMultiplier="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".view.PlayerActivity">

        <TextView
            android:id="@+id/player_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/playerSongMarginBottom"
            android:layout_marginEnd="@dimen/playerSongMarginEnd"
            android:layout_marginLeft="@dimen/playerSongMarginStart"
            android:layout_marginRight="@dimen/playerSongMarginEnd"
            android:layout_marginStart="@dimen/playerSongMarginStart"
            android:layout_marginTop="@dimen/playerSongMarginTop"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/playerSongTextSize"
            android:textStyle="bold"
            tools:text="Feel invincible" />

        <TextView
            android:id="@+id/player_artist_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/playerArtistAlbumTextSize"
            tools:text="Skillet - Unleashed" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/player_cover"
            android:layout_width="@dimen/playerCoverWidth"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/playerCoverMarginBottom"
            android:layout_marginTop="@dimen/playerCoverMarginTop"
            android:layout_weight="1"
            android:contentDescription="@string/song_cover"
            tools:src="@drawable/placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/playerTimeContainerMarginBottom"
            android:layout_marginEnd="@dimen/playerTimeContainerMarginEnd"
            android:layout_marginLeft="@dimen/playerTimeContainerMarginStart"
            android:layout_marginRight="@dimen/playerTimeContainerMarginEnd"
            android:layout_marginStart="@dimen/playerTimeContainerMarginStart"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player_elapsed_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/playerElapsedTimeTextSize"
                tools:text="00:00" />

            <SeekBar
                android:id="@+id/player_seek_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/player_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/playerDurationTextSize"
                tools:text="04:30" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/playerControlsPaddingBottom">

            <ImageButton
                android:id="@+id/player_skip_previous"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/skip_previous"
                app:srcCompat="@drawable/ic_previous" />

            <ImageButton
                android:id="@+id/player_rewind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/fast_rewind"
                app:srcCompat="@drawable/ic_fast_rewind" />

            <ImageButton
                android:id="@+id/player_pause"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/pause"
                app:srcCompat="@drawable/ic_pause" />

            <ImageButton
                android:id="@+id/player_ffwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/fast_forward"
                app:srcCompat="@drawable/ic_fast_forward" />

            <ImageButton
                android:id="@+id/player_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/skip_next"
                app:srcCompat="@drawable/ic_skip_next" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
